Fixed some layout issues on iPhone sim

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ footer {
 
 footer p {
 	display: inline;
-	margin: 10px;
+	margin: 5px;
 }
 
 fieldset {
